# secret-scanner

./: .gitignore  CMakeLists.txt  README.MD  README.md
.github/workflows/: release.yaml  test.yml
include/: constants.h  scanner.h  threadpool.h
scanner-core/: CMakeLists.txt  README.MD
scanner-core/include/: regexpattern.h
scanner-core/src/: constants.cpp  regexpattern.cpp  scanner.cpp
scanner-core/test/: test_regex.cpp  test_scanner.cpp
scanner-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
scanner-extension/src/: extension.ts
src/: main.cpp  regexpattern.cpp  scanner.cpp  threadpool.cpp
test/: test_regex.cpp
